Desktop view only

--- a/index.html
+++ b/index.html
@@ -44,16 +44,24 @@
 
         <div id="main2">
             <div id="main2a">
-                <img style="margin: 25px;" src="images/11 1.png">
-            </div>
-            <div id="main2b">
-                <p id="p3">
+                <p class="p3">
                     36,559,565,851
                 </p>
-                <p id="p4">
+                <p class="p4">
                     NOT ACCOUNTED FOR
                 </p>
-                <p id="p5">
+                <p class="p5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.
+                </p>
+            </div>
+            <div id="main2b">
+                <p class="p3">
+                    36,559,565,851
+                </p>
+                <p class="p4">
+                    NOT ACCOUNTED FOR
+                </p>
+                <p class="p5">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.
                 </p>
             </div>
@@ -65,30 +73,11 @@
             </div>
             <div id="main3b">
                 <div id="main3b_a">
-                    <section id="main3b_a1">
-                        <img class="section_icon" src="images/Group1.png">
-                        <p class="p_heading"><strong><a href="#"> Data by Topic</a></strong></p>
-                        <p class="p_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue..</p>
-                    </section>
-
-                    <section id="main3b_a2">
-                        <img class="section_icon" src="images/icons8-globe-50 1.png">
-                        <p class="p_heading"><strong><a href="#">omprehensive Data Sources</a></strong></p>
-                        <p class="p_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue..</p>
-                    </section>
-
-                    <section id="main3b_a3">
-                        <img class="section_icon" src="images/icons8-search-chat-50 1.png">
-                        <p class="p_heading"><strong><a href="#">Compare Data by State</a></strong></p>
-                        <p class="p_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.</p>
-                    </section>
-
-                    <section id="main3b_a4">
-                        <img class="section_icon" src="images/ant-design_download-outlined.png">
-                        <p class="p_heading"><strong><a href="#">Download and Share.</a></strong></p>
-                        <p class="p_content">orem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue..</p>
-                    </section>
-
+                    <video class="section3_video" controls>
+                        <source src="videos/002 Install python mac.mp4">
+                    
+                        Your browser does not support the video tag.
+                      </video>
                 </div>
                 <div id="main3b_b">
                     <div id="line"></div>
@@ -171,6 +160,29 @@
 
 
             <div id="section4_btn"><button class="bhcpf_button">BHCPF REPORT &nbsp &nbsp &gt;</button>
+            </div>
+        </div>
+        <div id="section5">
+            <div id="section5_a">
+                <span id="sec5_title">
+                    COLLABURATIONS & PARTNERSHIP
+                </span>
+                <span id="sec5a_text">
+                    We are committed to excellence and innovation and this can be seen in our partnerships & collaborations. Some of the partners and collaborations we have worked with over the years include:
+                </span>
+            </div>
+            <div id="section5_b">
+                <div class="partners">
+                    <div class="section5b_image">
+                        <img src="images/sec5_image1.png">
+                    </div>
+                    <div class="section5b_image">
+                        <img src="images/sec5_image2.png">
+                    </div>
+                    <div class="section5b_image">
+                        <img src="images/sec5_image3.png">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
