--- a/index.html
+++ b/index.html
@@ -5,223 +5,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>task</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="me.css">
+    <link rel="stylesheet" href="me2.css">
 </head>
-    <body>
-    <header>
-        <img id="logo" src="images/ONE-logo-black.png">
-        <ul>
-            <li id="home"><a href="#"> Home</a></li>
-            <li id="about"><a href="#">About Report</a></li>
-            <li id="data"><a href="#">Data & Documentation</a></li>
-            <li><button class="butten_g">EN  &nbsp &gt;</button></li>
-        </ul>
 
+<body>
+    <div id="container">
+        <header>
+            <img id="header_logo" src="images/ONE-logo-black.png">
+            <ul id="menue_list">
+                <li class="menue_li"><a href="#">Home</a></li>
+                <li class="menue_li"><a href="#">About Report</a></li>
+                <li class="menue_li"><a href="#">Data & Documentation</a></li>
+            </ul>
+            <div id="en_btn"> <button class="btn">En</button></div>
+            <div class="menue_btn"><button class="btn">Menue</button></div>
 
-    </header>
-
-
-    <main>
-        <div id="main1">
-            <div id="main1a">
-                <div id="text1">
-                    <p id="p1">
-                        250 MLN
-                    </p>
-                    <p id="p2">
-                        People live with disability
-                    </p>
-                    <button id="learn_more">Learn More &gt; </button>
+        </header>
+        <main>
+            <section id="section1">
+                <div id="section1a">
+                    <p id="section1_p1"> 250 MLN</p>
+                    <p id="section1_p2"> People live with disability</p>
+                    <div id="learnMore_btn"> <button class="btn2">LEARN MORE</button></div>
                 </div>
-
-            </div>
-            <div id="main1b">
-                <img style="height: 500px; width: 647px;" src="images/main-slider-three-img-1 1.png">
-            </div>
-        </div>
-
-        <div id="main2">
-            <div id="main2a">
-                <p class="p3">
-                    36,559,565,851
-                </p>
-                <p class="p4">
-                    NOT ACCOUNTED FOR
-                </p>
-                <p class="p5">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.
-                </p>
-            </div>
-            <div id="main2b">
-                <p class="p3">
-                    36,559,565,851
-                </p>
-                <p class="p4">
-                    NOT ACCOUNTED FOR
-                </p>
-                <p class="p5">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.
-                </p>
-            </div>
-        </div>
-        <div id="main3">
-            <div id="main3_top">
-                <span id="data_from_trusted_source"><strong>Data From Trusted Sources </strong></span>
-                <button id="main3_btn">EXPLORE DATA &nbsp &nbsp &gt;</button>
-            </div>
-            <div id="main3b">
-                <div id="main3b_a">
+                <div id="section1b"></div>
+            </section>
+            <section id="section2">
+                <div id="section2a">
+                    <p class="section2_num"> 12,559,565,781
+                    </p>
+                    <p class="section2_title"> DELTA STATE</p>
+                    <p class="section2_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.</p>
+                    <button class="section2_read_more">Read More</button>
+                </div>
+                <div id="section2b">
+                    <p class="section2_num"> 36,559,565,851</p>
+                    <p class="section2_title"> NOT ACCOUNTED FOR</p>
+                    <p class="section2_text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Enim id aenean sit nibh fermentum non purus augue.</p>
+                    <button class="section2_read_more">Read More</button>
+                </div>
+            </section>
+            <section id="section3">
+                <div id="section3a">
                     <video class="section3_video" controls>
                         <source src="videos/002 Install python mac.mp4">
                     
                         Your browser does not support the video tag.
                       </video>
                 </div>
-                <div id="main3b_b">
+                <div id="section3b">
                     <div id="line"></div>
-
-                    <div id="features">FEATURES</div>
-
+                    <div id="features"><strong>FEATURES</strong></div>
                     <img id="f_image_health" src="images/icons8-statistics-64 1.png">
-                    <div id="main3c_text">
-                        <p class="p_heading"><strong><a href="#">omprehensive Data Sources</a></strong></p>
-                        <p class="p_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean purus, tellus eleifend vitae tristique amet dis accumsan morbi blandit. Placerat posuere interdum lectus habitasse fringilla interdum aliquam odio quisque.</p>
-                    </div>
+                    <p id="section3_p1"> Nigerian's Health Ranking Annual Report</p>
+                    <p id="section3_p2"> Published June 2023</p>
+                    <p id="section3_p3"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean purus, tellus eleifend vitae tristique amet dis accumsan morbi blandit. Placerat posuere interdum lectus habitasse fringilla interdum aliquam odio quisque.</p>
+                    <button class="section2_read_more">Read More</button>
                 </div>
-
-            </div>
-        </div>
-        <div id="main4">
-            <span id="health_ranking_report"><strong>Health Ranking Report </strong></span>
-            <div id="section4">
-
-                <! -- start Section 4_1-->
-                <div id="section4_1">
-                    <div class="black_rectangle">
-                        <div id="overlaid_section4_1_1">30</div>
-                        <div id="overlaid_section4_1_2">Must-<br/>have</div>
-                        <div id="overlaid_section4_1_3">BHCPF REPORT</div>
-                        <div id="rectangle4_1_1"></div>
-                        <div id="rectangle4_1_2">
-                            <div id="rectangle4_1_4"></div>
-                        </div>
-
-                        <div id="rectangle4_1_3"></div>
-
-                    </div>
-
-                    <p class="p_section_head"><strong> BHCPF implementation in Nigeria</strong></p>
-                    <p class="p_section_head_content">Recognising that States have yet to start accessing funds from the EMT gateway, the results of desk reviews and consultations on the status of the.</p>
-
+                <div class="section3_picture">
                 </div>
-                <! -- end Section 4_1-->
+            </section>
+            <section id="section4">
 
-
-                <! -- start Section 4_2-->
-                <div id="section4_2">
-                    <div class="black_rectangle">
-                        <div id="overlaid_section4_2_1">BHCPF REPORT</div>
-                        <div id="overlaid_section4_2_2">DIGEST</div>
-                        <div id="rectangle4_2_2">
-
-                            <div id="rectangle4_2_4"></div>
-                            <div id="rectangle4_2_3"></div>
-                        </div>
-
-
-                    </div>
-                    <p class="p_section_head"><strong> Summary Analysis of 2022 HEALTH Report</strong></p>
-                    <p class="p_section_head_content">Recognising that States have yet to start accessing funds from the EMT gateway, the results of desk reviews and consultations on the</p>
+            </section>
+            <section id="section5">
+                <div id="section5a">
+                    <p id="section5_p1"> COLLABORATIONS</p>
+                    <p id="section5_p2"> & PARTNERSHIPS</p>
+                    <p id="section5_p3">We are committed to excellence and innovation and this can be seen in our partnerships & collaborations. Some of the partners and collaborations we have worked with over the years include: </p>
                 </div>
-                <! -- end Section 4_2-->
-
-
-                <! -- start Section 4_3-->
-                <div id="section4_3">
-                    <div class="black_rectangle">
-                        <div id="rectangle4_3_1"></div>
-                        <div id="rectangle4_3_2">
-                            <div id="rectangle4_3_4"></div>
-                        </div>
-
-                        <div id="rectangle4_3_3"></div>
-
-                    </div>
-                    <p class="p_section_head"><strong>   BHCPF implementation in Nigeria</strong></p>
-                    <p class="p_section_head_content">Recognising that States have yet to start accessing funds from the EMT gateway, the results of desk reviews and consultations on the status of the.</p>
-
+                <div id="section5b">
+                    <img class="section5b_images" src="images/sec5_image1.png">
+                    <img class="section5b_images" src="images/sec5_image2.png">
+                    <img class="section5b_images" src="images/sec5_image3.png">
                 </div>
-                <! -- end Section 4_3-->
+            </section>
+            <footer>
+                <ul class="footer_list">
+                    <li><a href="#">QUICK LINKS</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Issues</a></li>
+                    <li><a href="#">Media</a></li>
+                    <li><a href="#">News</a></li>
 
+                </ul>
+                <ul class="footer_list">
+                    <li>&nbsp &nbsp</li>
+                    <li><a href="#">Get Involved</a></li>
+                    <li><a href="#">Volunteer</a></li>
+                    <li><a href="#">Calendar</a> </li>
+                    <li><a href="#">Events</a></li>
+                </ul>
+                <ul class="footer_list">
+                    <li>&nbsp &nbsp</li>
+                    <li>&nbsp &nbsp</li>
+                    <li>
+                        <a href="#"><img src="images/ONE-logo-white 1.png"></a>
+                    </li>
+                    <li><a href="#">HomeCopyright © 2022  All Rights Reserved</a></li>
 
-            </div>
-
-
-            <div id="section4_btn"><button class="bhcpf_button">BHCPF REPORT &nbsp &nbsp &gt;</button>
-            </div>
-        </div>
-        <div id="section5">
-            <div id="section5_a">
-                <span id="sec5_title">
-                    COLLABURATIONS & PARTNERSHIP
-                </span>
-                <span id="sec5a_text">
-                    We are committed to excellence and innovation and this can be seen in our partnerships & collaborations. Some of the partners and collaborations we have worked with over the years include:
-                </span>
-            </div>
-            <div id="section5_b">
-                <div class="partners">
-                    <div class="section5b_image">
-                        <img src="images/sec5_image1.png">
-                    </div>
-                    <div class="section5b_image">
-                        <img src="images/sec5_image2.png">
-                    </div>
-                    <div class="section5b_image">
-                        <img src="images/sec5_image3.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <section id="section1_footer">
-            <ul>
-                <li><a href="#">QUICK LINKS</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Issues</a></li>
-                <li><a href="#">Media</a></li>
-                <li><a href="#">News</a></li>
-                <li>&nbsp &nbsp</li>
-                <li><a href="#">Get Involved</a></li>
-                <li><a href="#">Volunteer</a></li>
-                <li><a href="#">Calendar</a></li>
-                <li><a href="#">Events</a></li>
-
-            </ul>
-        </section>
-
-
-        <section id="section2_footer">
-            <img id="section2_footer_image" src="images/ONE-logo-white 1.png">
-            <span id="copywrite_span">Copyright © 2022  All Rights Reserved</span>
-        </section>
-        <section id="section3_footer">
-
-            <ul id="footer_list">
-
-                <div id="footer_btn"><button class="bhcpf_button" style="margin-left: 80px;">BHCPF REPORT &nbsp &nbsp &gt;</button>
-                    <li>Phone: (234) 733-3390</li>
-                    <li>E-mail: info@one.org</li>
-                </div>
-            </ul>
-
-
-        </section>
-
-    </footer>
-
+                </ul>
+                <ul class="footer_list">
+                    <li><a href="#">QUICK LINKS</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Issues</a></li>
+                    <li><a href="#">Media</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </footer>
+        </main>
+    </div>
 </body>
 
 </html>
