--- a/index.html
+++ b/index.html
@@ -94,7 +94,42 @@
          </div>
 
     
-        <footer></footer>
+        <footer>
+            <div class="footer_a">
+                <ul class="footer_list">
+                    <li><a href="#">QUICK LINKS</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Issues</a></li>
+                    <li><a href="#">Media</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+
+                <ul class="footer_list">
+                    <li>&nbsp &nbsp</li>
+                    <li><a href="#">Get Involved</a></li>
+                    <li><a href="#">Volunteer</a></li>
+                    <li><a href="#">Calendar</a> </li>
+                    <li><a href="#">Events</a></li>
+                </ul>
+            </div>
+
+                <div class="footer_b">
+                <ul class="footer_list">
+                    <li>&nbsp &nbsp</li>
+                    <li>&nbsp &nbsp</li>
+                    <li>
+                        <a href="#"><img src="images/ONE-logo-white 1.png"></a>
+                    </li>
+                    <li><a href="#">Copyright © 2022  All Rights Reserved</a></li>
+                </ul>
+
+                <ul class="footer_list">
+                    <li><a href="#">Phone: (234) 733-3390 </a></li>
+                    <li><a href="#">E-mail: info@one.org</a></li>
+                </ul>
+            </div>
+
+            </footer>
     </div>
 </body>
 </html>
