--- a/templets/small-slider/row1.html
+++ b/templets/small-slider/row1.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="small-slider.css">
-</head>
 <style>
-    
-/* small slider component for landing page and about page start */
+  body {
+    margin: 0;
+    padding: 0;
+}  
 .s-slider {
   display: flex;
   flex-direction: column;
@@ -282,5 +275,3 @@ line-height: 22px;
 
     </div>
     <!-- small slider component for landing page and about page End -->
-</body>
-</html>
