--- a/templets/small-slider/row1.html
+++ b/templets/small-slider/row1.html
@@ -31,8 +31,8 @@ padding: 0;
 
 /* <!-- row-2 start --> */
 .row-2 {
-  position: absolute;
-  top: 235px;
+  position: relative;
+  /* top: 235px; */
   display: flex;
   min-width: 320px;
   flex-direction: column;
@@ -111,7 +111,6 @@ justify-content: center;
 align-items: center;
 padding: 10px 20px;
 gap: 10px;
-position: relative;
 width: 170px;
 height: 46.37px;
 font-family: 'Colfax';
